fix layout issue

--- a/_sass/uno.scss
+++ b/_sass/uno.scss
@@ -464,8 +464,8 @@ hr {
   margin-bottom: 0.4em;
   margin-top: 3em;
   position: relative;
-  width: 75px;
-  height: 75px;
+  width: 100px;
+  height: 100px;
   border: 2px solid #fff;
   border-radius: 100%;
 }
